*Editted some Javascript to work with overal classes instead of only changing one property. * If a text is in the water, we don't want the color to be white, because the contrast is too low. Add the class "island" to those texts. * Text objects with the class "continent" allows the whole continent to be highlighted. - Removed JS functions to make it more readable, add them again later to reuse code * Moved a few text objects to be more on the land instead of the water. * Moved some text objects in their correct groups
+ Created the base HTML for the SVG tool box.

--- a/src/style/_svg.scss
+++ b/src/style/_svg.scss
@@ -1,30 +1,46 @@
-.cls-4, .cls-6, .cls-5 {
+.section__left svg {
+    height: 200vh;
+}
+
+.cls-4,
+.cls-6,
+.cls-5 {
     fill: $color-red;
 }
 .cls-6 {
     stroke: $color-red;
 }
-.cls-2, .cls-3 {
+.cls-2,
+.cls-3 {
     fill: $white;
 }
 
-.section__left svg {
-    height: 200vh;
+text {
+    fill: $black;
 }
 
-.invisible {
+
+
+[class*="text_"],
+[class*="pin_"] {
     visibility: hidden;
 }
-.visible {
-    visibility: visible;
-}
 
-.clicked {
-    & path {
+.continent__hovered,
+.continent__clicked,
+.land__clicked,
+.land__hovered {
+    
+    path,
+    polygon {
         fill: $color-green;
+        stroke: $color-green;
     }
-    & > text {
+    text {
         visibility: visible;
         fill: $white;
+        &.island {
+            fill: $black;
+        }
     }
 }
